[package]
name = "corrupttest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "21"
reqwest = { version = "0.11"}
tokio = {version = "1", features = ["full", "tracing"]}
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"
futures = "0.3"
clap = "2"
async-trait = "0.1"