[package]
name = "corrupttest"
version = "0.1.0"
edition = "2021"
default-run = "corrupttest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version = "0.5", features = ["runtime-tokio-native-tls", "mysql"]}
reqwest = { version = "0.11"}
tokio = {version = "1", features = ["full", "tracing"]}
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"
futures = "0.3"
clap = "2"
async-trait = "0.1"
slog = "2"
slog-async = "2"
slog-term = "2"
slog-scope = "4"
prettytable-rs = "0.8"
thiserror = "1"
ctrlc = "3"
lazy_static = "1"
regex = "1"
